[gd_scene load_steps=13 format=3 uid="uid://dg3elxvkc55dg"]

[ext_resource type="Texture2D" uid="uid://u37075llycfy" path="res://resources/sprites/UItileset.png" id="1_2i2cq"]
[ext_resource type="Script" path="res://resources/scenes/examples/window/window.gd" id="2_qjpql"]
[ext_resource type="AudioStream" uid="uid://cn8sj2ajke2r6" path="res://resources/audio/close.wav" id="3_6s5mf"]
[ext_resource type="FontFile" uid="uid://crc4df8q4f8i6" path="res://resources/fonts/Vipervibes.ttf" id="5_m06ko"]
[ext_resource type="StyleBox" uid="uid://b8d6vo61he8cd" path="res://resources/passwordinputbox.tres" id="6_ebnck"]
[ext_resource type="StyleBox" uid="uid://djpqbyxyro8sk" path="res://resources/invisible.tres" id="7_uwk2l"]
[ext_resource type="StyleBox" uid="uid://cqwcpaf5fy6a7" path="res://resources/button.tres" id="8_dwv5l"]
[ext_resource type="Script" path="res://resources/scenes/examples/scripts/draghandle.gd" id="9_rhsfx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oi20w"]
texture = ExtResource("1_2i2cq")
texture_margin_left = 4.0
texture_margin_top = 16.0
texture_margin_right = 20.0
texture_margin_bottom = 41.0
region_rect = Rect2(0, 0, 50, 50)

[sub_resource type="LabelSettings" id="LabelSettings_wnq2u"]
font = ExtResource("5_m06ko")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_xcy33"]
font = ExtResource("5_m06ko")
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7hes"]
bg_color = Color(0.064075, 0.0793855, 0.122807, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[node name="window" type="Panel" groups=["authentication"]]
custom_minimum_size = Vector2(123, 57)
offset_right = 123.0
offset_bottom = 57.0
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxTexture_oi20w")
script = ExtResource("2_qjpql")
can_drag = true
can_maximize = true
metadata/_edit_group_ = true

[node name="close_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6s5mf")

[node name="bodytext" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 10.0
offset_right = 106.0
offset_bottom = 24.0
scale = Vector2(0.5, 0.5)
text = "Body text
"
label_settings = SubResource("LabelSettings_wnq2u")
horizontal_alignment = 1
vertical_alignment = 1

[node name="windowname" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.1667
offset_top = 2.0
offset_right = 158.833
offset_bottom = 16.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
text = "placeholder
"
label_settings = SubResource("LabelSettings_xcy33")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 20.0
offset_right = 281.0
offset_bottom = 58.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("5_m06ko")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("6_ebnck")
placeholder_text = "This is a lineedit"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 9.0
grow_horizontal = 0
theme_override_constants/separation = 1
metadata/_edit_group_ = true

[node name="maximize" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(7, 7)
layout_mode = 2
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_styles/hover = ExtResource("7_uwk2l")
theme_override_styles/pressed = ExtResource("7_uwk2l")
theme_override_styles/normal = ExtResource("7_uwk2l")

[node name="close" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(7, 7)
layout_direction = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_styles/hover = ExtResource("7_uwk2l")
theme_override_styles/pressed = ExtResource("7_uwk2l")
theme_override_styles/normal = ExtResource("7_uwk2l")

[node name="button" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 29.0
offset_right = 281.0
offset_bottom = 69.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("5_m06ko")
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = ExtResource("8_dwv5l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i7hes")
theme_override_styles/normal = ExtResource("8_dwv5l")
text = "This is a button"

[node name="draghandle" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_top = 1.0
offset_right = 43.5
offset_bottom = 10.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("7_uwk2l")

[node name="resizehandle" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -8.66667
offset_right = 1.0
offset_bottom = 1.33333
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = ExtResource("7_uwk2l")
script = ExtResource("9_rhsfx")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="HBoxContainer/maximize" to="." method="_on_maximize_pressed"]
[connection signal="pressed" from="HBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="button" to="." method="_on_confirm_pressed"]
[connection signal="gui_input" from="draghandle" to="." method="_on_draghandle_gui_input"]
[connection signal="gui_input" from="resizehandle" to="resizehandle" method="_on_gui_input"]
